# django-couchbase-orm

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: app-services-setup.md  database-backend.md  document-api.md  hybrid.md  testing.md  wagtail.md
example/: .env.example  Procfile  README.md  build.sh  requirements.txt  start.sh
example/beerapp/: settings.py
example/beers/: admin.py  apps.py  models.py  oidc.py  serializers.py  urls.py  views.py
example/beers/management/commands/: recompute_ratings.py  seed_beers.py  set_doc_types.py  setup_oidc.py
example/beers/migrations/: 0001_initial.py  0002_beer_doc_type_brewery_doc_type_rating.py
example/beers/templates/beers/: base.html  beer_detail.html  beer_list.html
example/home/: models.py  signals.py
example/home/management/commands/: embed_blog_titles.py
example/home/migrations/: 0001_initial.py  0003_blogpage_blog_slug_blogpage_blog_title.py
example/home/templates/home/: blog_page.html  home_page.html
example/mysite/: settings.py  urls.py
example/templates/: base.html  privacy.html
example/templates/beers/: confirm_delete.html
example/templates/registration/: login.html
ios/BrewSync/: Package.swift  project.yml
ios/BrewSync/BrewSync/: BrewSyncApp.swift  Info.plist
ios/BrewSync/BrewSync.xcodeproj/: project.pbxproj
ios/BrewSync/BrewSync.xcodeproj/project.xcworkspace/xcuserdata/ediks.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BrewSync/BrewSync.xcodeproj/xcuserdata/ediks.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/BrewSync/BrewSync/App/: ContentView.swift
ios/BrewSync/BrewSync/Auth/: AppleSignInCoordinator.swift  AuthManager.swift  GoogleSignInHelper.swift  KeychainHelper.swift  PKCE.swift
ios/BrewSync/BrewSync/Database/: DatabaseManager.swift  ReplicatorManager.swift
ios/BrewSync/BrewSync/Models/: Beer.swift  Brewery.swift  Rating.swift
ios/BrewSync/BrewSync/Theme/: Theme.swift
ios/BrewSync/BrewSync/ViewModels/: BeerDetailViewModel.swift  BeerListViewModel.swift
ios/BrewSync/BrewSync/Views/: UserMenuView.swift
ios/BrewSync/BrewSync/Views/Beers/: BeerCardView.swift  BeerDetailView.swift  BeerFormView.swift  BeerListView.swift
ios/BrewSync/BrewSync/Views/Blog/: BlogView.swift
ios/BrewSync/BrewSync/Views/Breweries/: BreweryListView.swift
ios/BrewSync/BrewSync/Views/Login/: LoginView.swift
ios/BrewSync/BrewSync/Views/Ratings/: RatingStarsView.swift
src/django_cb/: __init__.py  connection.py  document.py
src/django_cb/contrib/auth/: backend.py  models.py
src/django_cb/contrib/sessions/: backend.py
src/django_cb/fields/: base.py  compound.py  datetime.py  reference.py  simple.py
src/django_cb/query/: n1ql.py
src/django_cb/queryset/: manager.py  q.py  queryset.py  transform.py
src/django_couchbase_orm/: __init__.py  apps.py  async_connection.py  document.py  exceptions.py
src/django_couchbase_orm/db/backends/couchbase/: base.py  client.py  compiler.py  creation.py  cursor.py  features.py  fields.py  introspection.py  operations.py  schema.py
src/django_couchbase_orm/fields/: simple.py
src/django_couchbase_orm/query/: n1ql.py  subdoc.py
src/django_couchbase_orm/queryset/: manager.py  queryset.py  transform.py
tests/: conftest.py  django_settings.py  test_async.py  test_audit_fixes.py  test_backend_crud.py  test_backend_phase2.py  test_backend_phase3.py  test_backend_phase4.py  test_backend_phase5.py  test_backend_security.py  test_backend_settings.py  test_bulk.py  test_concurrency.py  test_edge_cases.py  test_integration.py  test_n1ql.py  test_transforms.py  test_wagtail_settings.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
