[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-couchbase-orm"
version = "0.4.0"
description = "Django-style ORM for Couchbase — define models, run queries, and manage documents using familiar Django patterns."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Edik Simonian", email = "edik@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "couchbase>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "coverage>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/EdikSimonian/django-couchbase-orm"
Repository = "https://github.com/EdikSimonian/django-couchbase-orm"
Issues = "https://github.com/EdikSimonian/django-couchbase-orm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/django_couchbase_orm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
DJANGO_SETTINGS_MODULE = "tests.django_settings"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N812",  # SD is the official Couchbase subdocument alias
    "N818",  # DoesNotExist/MultipleObjectsReturned follow Django convention
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
