[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-couchbase-orm"
version = "1.3.0"
description = "Couchbase database backend for Django. Drop-in replacement for SQL databases with full ORM support, plus a standalone Document API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Edik Simonian", email = "edik@example.com" },
]
keywords = ["django", "couchbase", "orm", "database", "nosql", "n1ql", "wagtail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "couchbase>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-asyncio>=0.21",
    "coverage>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
wagtail = [
    "wagtail>=5.0",
]

[project.urls]
Homepage = "https://github.com/EdikSimonian/django-couchbase-orm"
Repository = "https://github.com/EdikSimonian/django-couchbase-orm"
Issues = "https://github.com/EdikSimonian/django-couchbase-orm/issues"
Changelog = "https://github.com/EdikSimonian/django-couchbase-orm/blob/main/CHANGELOG.md"
Documentation = "https://github.com/EdikSimonian/django-couchbase-orm/tree/main/docs"
Demo = "https://django-couchbase-orm-production.up.railway.app"

[tool.hatch.build.targets.wheel]
packages = ["src/django_couchbase_orm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
markers = [
    "integration: tests that require a local Couchbase instance",
    "backend: Django database backend tests (require Couchbase)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N812",  # SD is the official Couchbase subdocument alias
    "N818",  # DoesNotExist/MultipleObjectsReturned follow Django convention
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
